<resources>
    <string name="app_name">Note</string>
    <string name="my_notes">My Notes</string>
    <string name="note_title">Note title</string>
    <string name="note_sub_title">Note Subtitle</string>
    <string name="type_note_here">Type note here</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="add_image">Add image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter Url</string>
    <string name="add">Add</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="delete_note">Delete Note</string>
    <string name="message_input">Are you sure you want to delete this note?</string>
</resources>