<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_miscellaneous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_miscellaneous"
    android:orientation="vertical"
    android:padding="16dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="60dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <TextView
        android:id="@+id/tv_miscellaneous"
        android:fontFamily="@font/ubuntu_medium"
        android:text="@string/miscellaneous"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:layout_gravity="center"
        android:gravity="center"/>

    <LinearLayout
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/background_note_color_1"/>

            <ImageView
                android:id="@+id/image_color1"
                android:src="@drawable/ic_done"
                android:layout_width="40dp"
                android:padding="10dp"
                android:layout_gravity="center_vertical"
                android:layout_height="40dp"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/background_note_color_2"/>

            <ImageView
                android:id="@+id/image_color2"
                android:layout_width="40dp"
                android:padding="10dp"
                android:layout_gravity="center_vertical"
                android:layout_height="40dp"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/background_note_color_3"/>

            <ImageView
                android:id="@+id/image_color3"
                android:layout_width="40dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:padding="10dp" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/background_note_color_4"/>

            <ImageView
                android:id="@+id/image_color4"
                android:layout_width="40dp"
                android:padding="10dp"
                android:layout_gravity="center_vertical"
                android:layout_height="40dp"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/view_color5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/background_note_color_5"/>

            <ImageView
                android:id="@+id/image_color5"
                android:layout_width="40dp"
                android:padding="10dp"
                app:tint="@color/colorWhite"
                android:layout_gravity="center_vertical"
                android:layout_height="40dp"/>


        </FrameLayout>

        <TextView
            android:fontFamily="@font/ubuntu_medium"
            android:layout_width="wrap_content"
            android:text="Pick color"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:gravity="center"
        android:id="@+id/ll_add_image"
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/ic_image"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <TextView
            android:textSize="22sp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/add_image"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:gravity="center"
        android:id="@+id/ll_add_url"
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/ic_web_link"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <TextView
            android:textSize="22sp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/ubuntu_medium"
            android:textColor="@color/colorWhite"
            android:text="@string/add_url"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:gravity="center"
        android:visibility="gone"
        android:id="@+id/layoutDeleteNote"
        android:layout_width="match_parent"
        android:layout_height="35dp">

        <ImageView
            android:layout_gravity="center"
            android:src="@drawable/ic_delete"
            app:tint="@color/colroDelete"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <TextView
            android:textSize="22sp"
            android:fontFamily="@font/ubuntu_medium"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colroDelete"
            android:text="@string/delete_note"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>