<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activity.CreateNoteActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="70dp"
        android:clipToPadding="false"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorWhite" />

            <ImageView
                android:id="@+id/iv_save_note"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/background_done_button"
                android:paddingBottom="4dp"
                android:src="@drawable/ic_done"
                app:layout_constraintBottom_toBottomOf="@id/iv_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_back"/>


            <EditText
                android:id="@+id/et_note_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_bold"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorIcons"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/iv_back" />

            <TextView
                android:id="@+id/tv_dateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:textColor="@color/colorIcons"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/et_note_title"
                app:layout_constraintStart_toStartOf="@id/et_note_title"
                app:layout_constraintTop_toBottomOf="@id/et_note_title" />

            <EditText
                android:id="@+id/et_subtitle"
                android:layout_width="0dp"
                android:layout_height="40dp"

                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/note_sub_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorIcons"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_dateTime" />

            <View
                android:id="@+id/view_subtitile_indicator"
                android:layout_width="10dp"
                android:layout_height="0dp"
                android:layout_marginLeft="12dp"
                android:background="@drawable/background_subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/et_subtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/et_subtitle" />

            <ImageView
                android:id="@+id/imageNote"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:visibility="gone"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/et_subtitle"/>

            <ImageView
                android:id="@+id/imageRemoveImage"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/background_delete"
                android:padding="6dp"
                android:src="@drawable/ic_delete"
                android:visibility="gone"
                app:tint="@color/colorWhite"
                app:layout_constraintEnd_toEndOf="@id/imageNote"
                app:layout_constraintTop_toTopOf="@id/imageNote"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <LinearLayout
                android:id="@+id/ll_layout_web_url"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/imageNote">

                <TextView
                    android:id="@+id/tv_text_web_url"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"/>


                <ImageView
                    android:id="@+id/iv_remove_url"
                    android:layout_width="40dp"
                    android:src="@drawable/ic_delete"
                    app:tint="@color/colroDelete"
                    android:layout_height="40dp"/>

            </LinearLayout>

            <EditText
                android:id="@+id/et_complete_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="15dp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="200dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_layout_web_url" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
    <include layout="@layout/layout_miscellanous"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>